# rwkv-simple

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: sample.py
rwkv_simple/: __init__.py  rwkv.py
